--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -75,7 +75,7 @@
                                 <li><a href="">Troca e Devoluções</a></li>
                                 <li><a href="">Ranking e Vales</a></li>
                                 <li><a href="">Alterar Senha</a></li>
-                                <li><a href="/home/index">Sair</a></li>
+                                <li><a href="/">Sair</a></li>
                             </ul>
                         </li>
                     </ul>
