--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -72,7 +72,7 @@
                                 <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
                                 <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
                                 <li><a href="/clientes/meuspedidos">Meus Pedidos</a></li>
-                                <li><a href="">Troca e Devoluções</a></li>
+                                <li><a href="/clientes/troca">Troca e Devoluções</a></li>
                                 <li><a href="">Ranking e Vales</a></li>
                                 <li><a href="">Alterar Senha</a></li>
                                 <li><a href="/">Sair</a></li>
