--- a/RaellShoes/Views/Administrador/Index.cshtml
+++ b/RaellShoes/Views/Administrador/Index.cshtml
@@ -26,8 +26,8 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/antigo/css/style.css" rel="stylesheet">
+    <link href="~/assets/css/style.css" rel="stylesheet">
+    <link href="~/assets/antigo/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -54,7 +54,7 @@
                 </li>
                 <li><a class="nav-link scrollto" href="admin-procurar-cupom.html">Cupons</a></li>
                 <li><a class="nav-link scrollto" href="admin-procurar-troca.html">Trocas</a></li>
-                <li><a class="nav-link scrollto" href="admin-procurar-pedido.html">Pedidos</a></li>
+                <li><a class="nav-link scrollto" href="/administrador/Pedidos">Pedidos</a></li>
                 <li><a class="nav-link scrollto" href="admin-procurar-cliente.html">Clientes</a></li>
                 <li><a class="nav-link scrollto" href="admin-procurar-produto.html">Produtos</a></li>
                 <li><a class="nav-link scrollto" href=""></a></li>
@@ -426,7 +426,7 @@
                         form.classList.add('was-validated')
                     }, false)
                 })
-        })()
+    })()
     </script>
 
 
