--- a/RaellShoes/Views/Administrador/Pedidos.cshtml
+++ b/RaellShoes/Views/Administrador/Pedidos.cshtml
@@ -112,7 +112,7 @@
         @if (Model.Pedidos!= null)
         {
             <!--Últimos Clientes-->
-            <div class="container mt-5" id="resultado" hidden>
+            <div class="container mt-5" id="resultado" >
                 <!--Box ultimos clientes-->
                 <div class="info-wrap" style=" border-radius:20px; text-align: center;">
                     <h5><strong style="  color: rgb(13, 236, 181);">Resultado </strong></h5><br>
