Detalhes pedidos admin

--- a/RaellShoes/Views/Administrador/Index.cshtml
+++ b/RaellShoes/Views/Administrador/Index.cshtml
@@ -57,6 +57,7 @@
                 <li><a class="nav-link scrollto" href="/administrador/Pedidos">Pedidos</a></li>
                 <li><a class="nav-link scrollto" href="admin-procurar-cliente.html">Clientes</a></li>
                 <li><a class="nav-link scrollto" href="admin-procurar-produto.html">Produtos</a></li>
+                <li><a class="nav-link scrollto" href="/">Sair</a></li>
                 <li><a class="nav-link scrollto" href=""></a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
