--- a/RaellShoes/Views/Administrador/Trocas.cshtml
+++ b/RaellShoes/Views/Administrador/Trocas.cshtml
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>RaellShoes - Admin - Procurar troca</title>
+    <title>RaellShoes - Admin - trocas</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -134,7 +134,9 @@
                                             <td>@Html.DisplayFor(modelItem => item.Pedido.Cliente.Cpf)</td>                                            
                                             <td>@Html.DisplayFor(modelItem => item.DataSolicitacao)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                            <td><button class="btn btn-info btn-sm">Ver Solicitação</button></td>
+                                            <form>
+                                                <td><button  asp-action="DetalhesTroca" asp-route-id="@item.Id" class="btn btn-info btn-sm">Ver Solicitação</button></td>
+                                            </form>
                                         </tr>
                                     }
 
