--- a/RaellShoes/Views/Clientes/Troca.cshtml
+++ b/RaellShoes/Views/Clientes/Troca.cshtml
@@ -117,7 +117,7 @@
 
                             <div class="col-lg-2 col-md-2 form-group mt-3 mt-md-0" id="comb-form">
                                 <span>Status</span>
-                                <input disabled type="text" readonly class="form-control-plaintext" name="status-produto" id="status-produto" value="@item.Status" style="color: rgb(228, 22, 193); font-weight: bold; font-style: italic;">
+                                <input disabled type="text" readonly class="form-control-plaintext" name="status-produto" id="status-produto" value="@Html.DisplayFor(modelItem => item.Status)" style="color: rgb(228, 22, 193); font-weight: bold; font-style: italic;">
                                 <div class="validate"></div>
                             </div>
                         </div>
